--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body class="mat-typography">
-  <app-root></app-root>
+  <div class="mat-app-background">
+    <app-root></app-root>
+  </div>
 </body>
 
 </html>
